fix: burger position on mobile

--- a/src/components/Header/Navigation/Burger/Burger.css
+++ b/src/components/Header/Navigation/Burger/Burger.css
@@ -18,6 +18,12 @@
   }
 }
 
+@media (max-width: 480px) {
+  .burger {
+    right: 13px;
+  }
+}
+
 .burger__dash {
   width: 100%;
   height: 3px;
